Add serial numbers and navigation bar to all matrix pages

--- a/index.html
+++ b/index.html
@@ -238,6 +238,9 @@
                 <a href="#impact" class="nav-link text-white text-sm">Impact</a>
                 <a href="#committees" class="nav-link text-white text-sm">Committees</a>
                 <a href="#stories" class="nav-link text-white text-sm">Stories</a>
+                <a href="matrix.html" class="nav-link text-white text-sm">UNSC Matrix</a>
+                <a href="matrix_unhrc.html" class="nav-link text-white text-sm">UNHRC Matrix</a>
+                <a href="matrix_uncsw.html" class="nav-link text-white text-sm">UNCSW Matrix</a>
                 <a href="register.html" class="btn-primary text-white">Apply Now</a>
             </div>
 
@@ -257,6 +260,9 @@
         <a href="#impact" class="py-4 text-2xl font-bold text-white hover:text-[#D4A017] transition-colors" onclick="toggleMenu()">Impact</a>
         <a href="#committees" class="py-4 text-2xl font-bold text-white hover:text-[#D4A017] transition-colors" onclick="toggleMenu()">Committees</a>
         <a href="#stories" class="py-4 text-2xl font-bold text-white hover:text-[#D4A017] transition-colors" onclick="toggleMenu()">Stories</a>
+        <a href="matrix.html" class="py-4 text-2xl font-bold text-white hover:text-[#D4A017] transition-colors" onclick="toggleMenu()">UNSC Matrix</a>
+        <a href="matrix_unhrc.html" class="py-4 text-2xl font-bold text-white hover:text-[#D4A017] transition-colors" onclick="toggleMenu()">UNHRC Matrix</a>
+        <a href="matrix_uncsw.html" class="py-4 text-2xl font-bold text-white hover:text-[#D4A017] transition-colors" onclick="toggleMenu()">UNCSW Matrix</a>
         <a href="register.html" class="mt-8 btn-primary" onclick="toggleMenu()">Apply Now</a>
     </div>
 
@@ -337,11 +343,11 @@
             <div class="grid grid-cols-2 lg:grid-cols-4 gap-8">
                 <div class="impact-stat">
                     <div class="impact-number accent-yellow text-4xl md:text-5xl font-bold">50+</div>
-                    <p class="text-2xl md:text-3xl font-bold mb-1">students</p>
-                    <p class="text-lg text-gray-400">from Universities and schools all over Maharashtra</p>
+                    <p class="text-2xl md:text-3xl font-bold mb-1">Schools & Universities</p>
+                    <p class="text-lg text-gray-400">from all over Maharashtra</p>
                 </div>
                 <div class="impact-stat">
-                    <div class="impact-number accent-teal text-4xl md:text-5xl font-bold"><span class="counter" data-target="120">0</span>+</div>
+                    <div class="impact-number accent-teal text-4xl md:text-5xl font-bold"><span class="counter" data-target="150">0</span>+</div>
                     <p class="text-2xl md:text-3xl font-bold mb-1">Delegates</p>
                     <p class="text-lg text-gray-400">Young leaders trained</p>
                 </div>
@@ -365,22 +371,25 @@
             <div class="grid lg:grid-cols-2 gap-16 items-center">
                 <div class="relative">
                 <div class="absolute -top-6 -left-6 w-full h-full bg-[#003366] rounded-lg"></div>
-                <img src="https://pbs.twimg.com/ext_tw_video_thumb/1907016516429815808/pu/img/DnQvQjwb6k512qdD.jpg"
-                    alt="Prof. Nitin Desai"
+                <img src="C:\Users\shlok\OneDrive\Desktop\Model United Nations SSBAS\Pragya .jpeg" alt="Prof.i"
                     class="relative z-10 rounded-lg shadow-xl w-full">
              </div>
                 <div>
                     <p class="text-[#003366] font-bold text-sm tracking-widest uppercase mb-4">Featured Message</p>
-                    <h2 class="text-3xl md:text-4xl font-bold mb-6">From the Dean, SSBAS, Somaiya Vidyavihar University</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold mb-6">Letter from Secretary General</h2>
                     <div class="space-y-4 text-gray-600 text-lg leading-relaxed">
-                        <p>"It is my distinct honor to welcome you to the first edition of Lokneeti. In a world increasingly defined by polarization, our conference serves as a sanctuary for critical thinking and constructive disagreement."</p>
-                        <p>"We have designed this year's committees to push delegates beyond their comfort zones, demanding not just eloquence, but true diplomatic strategy and empathy."</p>
+                        <p>"It is my distinct honor to welcome you to the first edition of Lokneeti Model United Nations,
+
+
+Lokneeti MUN is a space for thoughtful dialogue, diverse perspectives, and meaningful debate."</p>
+                        <p>"Whether you are here to challenge opinions, defend positions, or learn through discussion, your voice adds value to the room"</p>
+                         <p>"We look forward to engaging debates, fresh perspectives, and a conference experience that is both enriching and memorable."</p>
                     </div>
                         <div class="mt-8 flex items-center space-x-4">
                         <div class="w-1 h-16 bg-[#D4A017]"></div>
                         <div>
-                            <p class="font-bold text-lg">Prof. Nitin Desai</p>
-                            <p class="text-gray-500">Dean, SSBAS, Somaiya Vidyavihar University</p>
+                            <p class="font-bold text-lg">Pragya Shaw</p>
+                            <p class="text-gray-500">Secretary General, Lokneeti, Somaiya Vidyavihar University</p>
                         </div>
                     </div>
                 </div>
@@ -411,7 +420,7 @@
                             <span class="text-sm font-bold text-gray-400 uppercase tracking-wider">UNSC</span>
                         </div>
                         <h3 class="text-2xl font-bold mb-3">UNSC (United Nations Security Council)</h3>
-                        <p class="text-gray-600 mb-6 leading-relaxed">Assessing the ongoing conflict in the Republic of Sudan.</p>
+                        <p class="text-gray-600 mb-6 leading-relaxed"> Reassessing the Legality and Security Implications of Extraterritorial Counter-terrorism Operations Conducted Without Host State Consent.</p>
                     </div>
                 </div>
                 <div class="focus-card bg-white shadow-lg overflow-hidden group">
@@ -424,7 +433,7 @@
                             <span class="text-sm font-bold text-gray-400 uppercase tracking-wider">UNHRC</span>
                         </div>
                         <h3 class="text-2xl font-bold mb-3">UNHRC (United Nations Human Rights Council)</h3>
-                        <p class="text-gray-600 mb-6 leading-relaxed">The impact of digital surveillance and artificial intelligence on the right to privacy and freedom of expression.</p>
+                        <p class="text-gray-600 mb-6 leading-relaxed">Addressing Human Rights' Violations due to Police / State Intervention during Protests & Peaceful Assemblies</p>
                     </div>
                 </div>
                 <div class="focus-card bg-white shadow-lg overflow-hidden group">
@@ -437,7 +446,7 @@
                             <span class="text-sm font-bold text-gray-400 uppercase tracking-wider">UNCSW</span>
                         </div>
                         <h3 class="text-2xl font-bold mb-3">UNCSW (United Nations Commission on the Status of Women)</h3>
-                        <p class="text-gray-600 mb-6 leading-relaxed">Advancing gender equality and women's empowerment globally.</p>
+                        <p class="text-gray-600 mb-6 leading-relaxed">Strengthening Global Frameworks to Prevent Sexual Exploitation and Trafficking of Women and Girls by Powerful Networks: Enhancing Accountability, Survivor-Centric Justice, and Institutional Transparency.</p>
                     </div>
                 </div>
                 <div class="focus-card bg-white shadow-lg overflow-hidden group">
@@ -450,7 +459,8 @@
                             <span class="text-sm font-bold text-gray-400 uppercase tracking-wider">LOKSABHA</span>
                         </div>
                         <h3 class="text-2xl font-bold mb-3">LOKSABHA</h3>
-                        <p class="text-gray-600 mb-6 leading-relaxed">Formulating a national strategy against terrorism and cross-border infiltration.</p>
+                        <p class="text-gray-600 mb-6 leading-relaxed">National Security and Civil Liberties: 
+Re-examination of Sedition, UAPA, and Preventive Detention Laws.</p>
                     </div>
                 </div>
                 <div class="focus-card bg-white shadow-lg overflow-hidden group">
@@ -475,9 +485,9 @@
     <!-- Quote Section - Gates Style -->
     <section class="quote-section py-24 px-6 relative overflow-hidden" style="background: #23272f;">
         <div class="max-w-4xl mx-auto relative z-10 text-center">
-            <blockquote style="font-size:2.2rem; font-weight:300; color:#fff; line-height:1.2; margin-bottom: 1.5rem; text-align:center;">
-                Policy is the art of the possible;<br>
-                <span style="color:#FFB81C; font-size:2.2rem; font-weight:700; display:block; margin-top:0.5rem; text-align:center;">leadership is<br>the art of the necessary.</span>
+            <blockquote style="font-size:4.2rem; font-weight:300; color:#fff; line-height:1.2; margin-bottom: 1.5rem; text-align:center;">
+                Policy is the art of the possible;
+                <span style="color:#FFB81C; font-size:2.4rem; font-weight:700; display:block; margin-top:0.5rem; text-align:center;">leadership is the art of the necessary.</span>
             </blockquote>
             <p style="color:#cbd5e1; font-size:1rem; margin-top:1.5rem; text-align:center;">The guiding principle of Lokneeti</p>
         </div>
