--- a/register.html
+++ b/register.html
@@ -159,7 +159,7 @@
             <a href="index.html" class="flex items-center space-x-3 group">
                 <div class="w-12 h-12 bg-gradient-to-br from-[#003366] to-[#8B1538] flex items-center justify-center text-white font-bold text-xl rounded-sm">L</div>
                 <div>
-                    <h1 class="text-xl font-bold tracking-wide leading-none text-gray-900">LOKNITI</h1>
+                    <h1 class="text-xl font-bold tracking-wide leading-none text-gray-900">Lokneeti</h1>
                     <p class="text-[11px] tracking-wider text-gray-500 font-semibold">SSBAS MUN 2026</p>
                 </div>
             </a>
@@ -185,7 +185,7 @@
     <section class="bg-gradient-to-r from-[#003366] to-[#8B1538] text-white pt-32 pb-16 px-6">
         <div class="max-w-7xl mx-auto text-center">
             <p class="text-[#D4A017] font-bold text-sm tracking-widest uppercase mb-4">Delegate Registration</p>
-            <h1 class="text-5xl md:text-6xl font-bold mb-6">Join SSBAS-MUN 2026</h1>
+            <h1 class="text-5xl md:text-6xl font-bold mb-6">Join Lokneeti MUN 2026</h1>
             <p class="text-xl opacity-90 max-w-2xl mx-auto">
                 Secure your position as a delegate and shape the future through diplomacy and debate.
             </p>
